Update Dockerfile and docker-compose.yml, add ping command and test cases

--- a/DockerFile
+++ b/DockerFile
@@ -3,11 +3,14 @@ FROM python:3.9-slim
 # Working Directory
 WORKDIR /app
 
-# Copy source code to working directory
-COPY . /app
+# Copy requirements.txt to working directory
+COPY requirements.txt /app/
 
 # Install packages from requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy source code to working directory
+COPY . /app/
 
 # Environment Variables
 ENV ENV=production
